Fix remember me button on mobile. Fix #714

--- a/app/assets/stylesheets/forms.css.scss
+++ b/app/assets/stylesheets/forms.css.scss
@@ -36,10 +36,18 @@
 .form-horizontal .checkbox {
   margin-left: 20px;
   margin-top: 10px;
+
+  @include breakpoint($mobile) {
+    margin-left: 40px;
+  }
 }
 
 .checkbox input[type="checkbox"] {
   position: absolute;
   margin-left: -20px;
   margin-top: -7px;
+
+  @include breakpoint($mobile) {
+    margin-left: -40px;
+  }
 }
